RESOLVED FIXED70924
[GTK] Inconsistent name of WebKitSettings macros
https://bugs.webkit.org/show_bug.cgi?id=70924
Summary [GTK] Inconsistent name of WebKitSettings macros
Carlos Garcia Campos
Reported 2011-10-26 07:39:14 PDT
WEB_SETTINGS is used in some macros.
Attachments
Patch (14.97 KB, patch)
2011-10-26 07:47 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2011-10-26 07:47:23 PDT
WebKit Review Bot
Comment 2 2011-10-26 07:50:22 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2011-10-26 08:41:15 PDT
Note You need to log in before you can comment on or make changes to this bug.