[GTK] Inconsistent name of WebKitSettings macros https://bugs.webkit.org/show_bug.cgi?id=70924

Reviewed by Martin Robinson.

Rename WEBKIT_TYPE_WEB_SETTINGS as WEBKIT_TYPE_SETTINGS and
WEBKIT_IS_WEB_SETTINGS as WEBKIT_IS_SETTINGS.

* UIProcess/API/gtk/WebKitSettings.cpp:
(webkit_settings_init):
(webkit_settings_new):
(webkit_settings_get_enable_javascript):
(webkit_settings_set_enable_javascript):
(webkit_settings_get_auto_load_images):
(webkit_settings_set_auto_load_images):
(webkit_settings_get_load_icons_ignoring_image_load_setting):
(webkit_settings_set_load_icons_ignoring_image_load_setting):
(webkit_settings_get_enable_offline_web_application_cache):
(webkit_settings_set_enable_offline_web_application_cache):
(webkit_settings_get_enable_html5_local_storage):
(webkit_settings_set_enable_html5_local_storage):
(webkit_settings_get_enable_html5_database):
(webkit_settings_set_enable_html5_database):
(webkit_settings_get_enable_xss_auditor):
(webkit_settings_set_enable_xss_auditor):
(webkit_settings_get_enable_frame_flattening):
(webkit_settings_set_enable_frame_flattening):
(webkit_settings_get_enable_plugins):
(webkit_settings_set_enable_plugins):
(webkit_settings_get_enable_java):
(webkit_settings_set_enable_java):
(webkit_settings_get_javascript_can_open_windows_automatically):
(webkit_settings_set_javascript_can_open_windows_automatically):
(webkit_settings_get_enable_hyperlink_auditing):
(webkit_settings_set_enable_hyperlink_auditing):
* UIProcess/API/gtk/WebKitSettings.h:

Canonical link: https://commits.webkit.org/87135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98484 268f45cc-cd09-0410-ab3c-d52691b4dbfc